# rusty-mythus

./: .commit-message-template  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  logs.json  spec.yaml  spec.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  base.yml  production.yaml
coverage/: Test health_check_works Coverage Results.lcov
db-data/: postmaster.pid
db-data/base/13395/: pg_internal.init
db-data/base/16384/: 1247  1249  1255  1255_vm  1259  16385  16389  16393  16395  16402  16403  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2703  2704  3455  5002  pg_internal.init
db-data/global/: 1262  2671  2672  pg_control  pg_internal.init
db-data/pg_stat_tmp/: db_0.stat  db_13395.stat  db_16384.stat  global.stat
migrations/: 20220704213603_create_subscriptions_table.sql  20220720020405_create_jobs_table.sql  20220914171725_add_extra_fields_to_jobs_table.sql  20220919194811_update_empty_required_fields.sql  20220929134014_create_users_table.sql
migrations/2022-06-07-231208_create_jobs/: up.sql
scripts/: init_db.sh
src/: README.md  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  models.rs  schema.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  validate_credentials.rs
src/routes/auth/: basic_auth.rs
src/routes/jobs/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/routes/users/: create.rs
tests/: health_check.rs
tests/api/: helpers.rs
