[package]
edition = "2021"
name = "mythus"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "mythus"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
config = "0.13.1"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
uuid = {version = "1", features = ["v4"]}

# Database management
[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls", # uses actix as runtime for the features and rustls as TLS backend
  "macros", # Access to sqlx::query! and sqlx::query_as!
  "postgres", # Provides postgress-specific functionality
  "uuid", # Adds uuid support for our id column
  "chrono", # Adds supports to SQL timestampz to DateTime<T>
  "migrate", # Provides migrations functionality
  "json", # Add support for JSON and JSONB (in postgres) using the serde_json crate.
]
version = "0.6.0"

[dev-dependencies]
reqwest = "0.11"
